# talksy

./: .env.example  .gitignore  README.md  dev.py  project_overview.md  pyproject.toml  run-dev.bat
src/: __init__.py
src/backend/: __init__.py  create_tables.py  piccolo_conf.py
src/backend/app/: __init__.py  __main__.py  config.py  main.py
src/backend/app/agents/: __init__.py
src/backend/app/agents/common/: __init__.py  checkpointer.py  llm.py  tools.py
src/backend/app/agents/daily_study/: models.py  prompts.py
src/backend/app/agents/exam/: __init__.py  graph.py  models.py  nodes.py  prompts.py  state.py
src/backend/app/agents/placement/: graph.py  models.py  nodes.py  prompts.py  state.py
src/backend/app/agents/services/: __init__.py  exam_service.py  topic_service.py
src/backend/app/agents/topic_generator/: __init__.py  graph.py  models.py  nodes.py  prompts.py  state.py
src/backend/app/api/: __init__.py  health.py
src/backend/app/api/v1/: __init__.py  admin.py  conversations.py  exams.py  ielts.py  practice.py  speech.py  users.py
src/backend/app/cli/: __init__.py  createsuperuser.py
src/backend/app/core/: __init__.py  auth.py  exception_handlers.py  exceptions.py  logging.py
src/backend/app/db/: __init__.py  bootstrap.py  piccolo_app.py  tables.py
src/backend/app/db/migrations/: talksy_2026_03_12t12_44_17_752090.py
src/backend/app/memory/: __init__.py  client.py  models.py  service.py  tools.py
src/backend/app/schemas/: __init__.py  base.py  conversation.py  exam.py  health.py  ielts.py  practice.py  user.py
src/backend/app/services/: __init__.py  ai.py  base.py  conversation.py  document.py  exam.py  ielts.py  speech.py  user.py
src/web/: package.json  pnpm-lock.yaml  vite.config.ts
src/web/src/: App.tsx  index.css  main.tsx
src/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  textarea.tsx
src/web/src/hooks/: use-audio-recorder.ts
src/web/src/lib/: admin-api.ts  api-client.ts  app-errors.ts  auth-api.ts  auth.tsx  ielts-api.ts  speech-api.ts  tts-stream-player.ts
src/web/src/pages/: login.tsx  signup.tsx
src/web/src/pages/admin/: analytics.tsx  dashboard.tsx  documents.tsx  exams.tsx  layout.tsx  model-browser.tsx  questions.tsx  users.tsx
tests/: conftest.py  test_api_validation.py  test_checkpointer.py  test_embeddings.py  test_exam_service.py  test_exception_handlers.py  test_memory.py
(+16 files in other folders)
