[project]
name = "talksy"
version = "0.1.0"
description = "AI-powered mock exam and English conversation practice platform for IELTS, PTE, and TOEFL preparation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Talksy Team" }]
keywords = ["ielts", "pte", "toefl", "english", "exam", "ai", "conversation", "practice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education :: Testing",
]

dependencies = [
    "litestar[standard]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "piccolo[all]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.2.0",
    "langchain-groq>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "argon2-cffi>=23.0.0",
    "python-multipart>=0.0.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-community>=0.4.1",
    "tavily-python>=0.5.0",
    "qdrant-client>=1.17.0",
    "langchain-qdrant>=1.1.0",
    "langchain-huggingface>=1.2.1",
    "sentence-transformers>=5.2.3",
    "pyjwt>=2.11.0",
    "groq>=0.30.0",
    "granian[reload,uvloop]>=2.7.2",
    "pypdf>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/hrmasss/talksy"
Documentation = "https://docs.talksy.app"
Repository = "https://github.com/hrmasss/talksy"

[project.scripts]
talksy = "dev:main"
createsuperuser = "src.backend.app.cli.createsuperuser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
